M4: Native CLI (#7)
Every CLI command over the shared tapir client, the daemon service commands, the stdio MCP proxy and scripts/install.sh. CI checks the Native CLI against a live daemon on Linux and macOS. An intermittent Linux-only hang is parked as TIK-4.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>